upgrade ngx_pagespeed; add option to disable ngx_pagespeed module (useful for local environments)

--- a/templates/default/ngx_pagespeed.conf.erb
+++ b/templates/default/ngx_pagespeed.conf.erb
@@ -2,6 +2,6 @@
 # Local modifications will be overwritten.
 #
 # The ngx_pagespeed configuration file.
-pagespeed on;
+pagespeed <%= @params['enabled'] %>;
 pagespeed FileCachePath <%= @params['FileCachePath'] %>;
 pagespeed EnableFilters <%= @params['EnableFilters'] %>;
