remove dependency to dop_base; depreciate geoip and make use of http_geoip_module from opscode cookbook; depreciate naxsi and make use of naxsi_module from opscode cookbook; upgrade ngx_pagespeed; upgrade geoip; upgrade naxsi (see https://github.com/opscode-cookbooks/nginx/pull/200); introduce test-kitchen;

--- a/templates/default/ngx_pagespeed.conf.erb
+++ b/templates/default/ngx_pagespeed.conf.erb
@@ -5,3 +5,6 @@
 pagespeed <%= @params['enabled'] %>;
 pagespeed FileCachePath <%= @params['FileCachePath'] %>;
 pagespeed EnableFilters <%= @params['EnableFilters'] %>;
+<% if @params['DisableFilters'] %>
+pagespeed DisableFilters <%= @params['DisableFilters'] %>;
+<% end %>
