add pagespeed_libraries.conf as it is needed for canonicalize_javascript_libraries; upgrade nginx to 1.6.0; add spdy module;

--- a/templates/default/ngx_pagespeed.conf.erb
+++ b/templates/default/ngx_pagespeed.conf.erb
@@ -2,6 +2,9 @@
 # Local modifications will be overwritten.
 #
 # The ngx_pagespeed configuration file.
+<% if @params['canonicalize_javascript_libraries'] %>
+include pagespeed_libraries.conf;
+<% end %>
 pagespeed <%= @params['enabled'] %>;
 pagespeed FileCachePath <%= @params['FileCachePath'] %>;
 pagespeed EnableFilters <%= @params['EnableFilters'] %>;
