upgrade ngx_pagespeed; configure ngx_pagespeed statistics paths;

--- a/templates/default/ngx_pagespeed.conf.erb
+++ b/templates/default/ngx_pagespeed.conf.erb
@@ -11,3 +11,9 @@ pagespeed EnableFilters <%= @params['EnableFilters'] %>;
 <% if @params['DisableFilters'] %>
 pagespeed DisableFilters <%= @params['DisableFilters'] %>;
 <% end %>
+pagespeed AdminPath <%= @params['AdminPath'] %>;
+pagespeed GlobalAdminPath <%= @params['GlobalAdminPath'] %>;
+pagespeed StatisticsPath <%= @params['StatisticsPath'] %>;
+pagespeed GlobalStatisticsPath <%= @params['GlobalStatisticsPath'] %>;
+pagespeed MessagesPath <%= @params['MessagesPath'] %>;
+pagespeed ConsolePath <%= @params['ConsolePath'] %>;
