upgrade ngx_pagespeed add ngx_pagespeed configs

--- a/templates/default/ngx_pagespeed.conf.erb
+++ b/templates/default/ngx_pagespeed.conf.erb
@@ -35,3 +35,4 @@ pagespeed LRUCacheByteLimit <%= @params['LRUCacheByteLimit'] %>;
 pagespeed CacheFlushPollIntervalSec <%= @params['CacheFlushPollIntervalSec'] %>;
 pagespeed DownstreamCacheRewrittenPercentageThreshold <%= @params['DownstreamCacheRewrittenPercentageThreshold'] %>;
 pagespeed RetainComment "<%= @params['RetainComment'] %>";
+pagespeed DownstreamCachePurgeMethod <%= @params['DownstreamCachePurgeMethod'] %>;
