--- a/templates/default/ngx_pagespeed.conf.erb
+++ b/templates/default/ngx_pagespeed.conf.erb
@@ -36,3 +36,5 @@ pagespeed CacheFlushPollIntervalSec <%= @params['CacheFlushPollIntervalSec'] %>;
 pagespeed DownstreamCacheRewrittenPercentageThreshold <%= @params['DownstreamCacheRewrittenPercentageThreshold'] %>;
 pagespeed RetainComment "<%= @params['RetainComment'] %>";
 pagespeed DownstreamCachePurgeMethod <%= @params['DownstreamCachePurgeMethod'] %>;
+
+pagespeed DownstreamCachePurgeMethod <%= @params['Disallow'] %>;
