* fix Disallow setting for ngx_pagespeed * upgrade geoip * upgrade ngx_pagespeed * upgrade naxsi * update testsuites

--- a/templates/default/ngx_pagespeed.conf.erb
+++ b/templates/default/ngx_pagespeed.conf.erb
@@ -37,4 +37,4 @@ pagespeed DownstreamCacheRewrittenPercentageThreshold <%= @params['DownstreamCac
 pagespeed RetainComment "<%= @params['RetainComment'] %>";
 pagespeed DownstreamCachePurgeMethod <%= @params['DownstreamCachePurgeMethod'] %>;
 
-pagespeed DownstreamCachePurgeMethod <%= @params['Disallow'] %>;
+pagespeed Disallow <%= @params['Disallow'] %>;
